# fastrepl

./: .gitignore  .iex.exs  Dockerfile  LICENSE  README.md  Taskfile.yaml  debug.sh  fly.toml  mix.exs
.github/workflows/: cd.yaml  ci.yaml  cicd.yaml
assets/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
assets/css/: app.css
assets/js/: app.js
assets/lib/: actions.ts  fsm.test.ts  fsm.ts  interfaces.ts  turndown.ts  types.ts
assets/svelte/: ActionPanel.svelte  ChangesPanel.svelte  ChatEditor.svelte  ChatMessage.svelte  CodeActionList.svelte  CodeDiff.svelte  CodeSnippet.svelte  CodeSnippets.svelte  CommentEditor.svelte  CommentList.svelte  Comments.svelte  CommentsPanel.svelte  DiffEditor.svelte  DiffViewer.svelte  DiffsViewer.svelte  Execution.svelte  FileNavigator.svelte  FileViewer.svelte  Initialization.svelte  (+24 more)
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: fastrepl.ex  fastrepl_web.ex  tracing.ex
native/code_utils/: Cargo.toml  LICENSE  README.md
native/code_utils/src/: chunk.rs  diff.rs  ds.rs  git.rs  lexical.rs  lib.rs  patch.rs  query.rs
native/code_utils/src/tests/: diff.rs  ds.rs  git.rs  grep.rs  lexical.rs  mod.rs  naive.rs  patch.rs  python.rs  query.rs
native/code_utils/src/tests/snapshots/: code_utils__tests__naive__markdown.snap  code_utils__tests__python__class.snap
native/rust_chunker/: Cargo.toml  README.md
native/rust_chunker/src/: lib.rs
notebooks/: README.md  comment.livemd  comments.livemd  issue_understanding.livemd  repo_indexing.livemd  retrieval.livemd
test/: test_helper.exs
(+198 files in other folders)
