[package]
name = "code_utils"
version = "0.1.0"
edition = "2021"
description = "Code utils used in Fastrepl"
license = "MIT"

[lib]
name = "code_utils"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.32.1"
tree-sitter = "0.22.5"
rs-tree-sitter-languages = "0.0.2"
grep = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
git2 = "0.18.3"
diffy = "0.3.0"

[dev-dependencies]
include_uri = "0.1.1"
insta = "1.38.0"
nanoid = "0.4.0"
