[package]
name = "rust_chunker"
version = "0.1.0"
edition = "2021"
description = "Code chunker used in Fastrepl"
license = "MIT"

[lib]
name = "rust_chunker"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.32.1"
tree-sitter = "0.22.5"
rs-tree-sitter-languages = "0.0.2"

[dev-dependencies]
include_uri = "0.1.1"
insta = "1.38.0"
